apps/paperless-ngx/redis/headless-svc.yaml
---
# Source: paperless-ngx/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  labels:
    app: redis
    part-of: paperless-ngx
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: release-name
    app: redis
